<resources>
    <string name="app_name">fqrouter2</string>
    <string name="old_version_alert_title">fqrouter has been upgraded to 2.x.x version</string>
    <string name="old_version_alert_message">If you experienced error, please restart your mobile and uninstall old fqrouter 1.x.x version.</string>
    <string name="old_version_alert_button">OK, I will do it</string>
    <string name="new_version_alert_title">There are newer version</string>
    <string name="new_version_alert_message">Do you want to upgrade now?</string>
    <string name="new_version_alert_yes">Yes</string>
    <string name="new_version_alert_no">No</string>
    <string name="uninstall_old_version_alert_title">fqrouter has been upgraded to 2.x.x version</string>
    <string name="uninstall_old_version_alert_message">The old 1.x.x version will be uninstalled</string>
    <string name="uninstall_old_version_alert_button">Uninstall</string>
    <string name="vpn_exit_hint">Use notification bar to stop VPN</string>
    <string name="notification_title">fqrouter is running</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_upgrade_manually">Upgrade Manually</string>
    <string name="menu_report_error">Report Error</string>
    <string name="menu_exit">Exit</string>
    <string name="status_ready">You may try youtube/twitter now</string>
    <string name="status_free_internet_connecting">Connecting to free internet</string>
    <string name="status_free_internet_disconnecting">Disconnecting from free internet</string>
    <string name="status_wifi_repeater_starting">Starting wifi repeater</string>
    <string name="status_wifi_repeater_stopping">Stopping wifi repeater</string>
    <string name="status_launching">Launching</string>
    <string name="status_launch_vpn">Launch Socks Vpn Service</string>
    <string name="status_vpn_rejected">vpn permission rejected</string>
    <string name="free_internet_info_title">Free Internet Access</string>
    <string name="free_internet_info_message">When this arrow is green, the mobile can access youtube/twitter. By
        default, fqrouter will use public proxy servers to circumvent GFW censorship. If mobile is [ROOTED], scrambler
        will be used to bypass GFW without proxy help. If you have private proxy servers, you can setup them in the
        settings.
    </string>
    <string name="free_internet_info_button">Got it!</string>
    <string name="wifi_repeater_info_title">Share Free Internet via Wifi</string>
    <string name="wifi_repeater_info_message">If you mobile is [ROOTED], then you can share free internet to other
        devices. All android built-in internet sharing method can be used, such as USB/Bluetooth/3G Wifi Hotspot.
        Additionally, fqrouter can start wifi hotspot even if the mobile is connected to a wifi network, A.K.A wifi
        repeater. It ONLY works on a few mobiles, but still worth trying.
    </string>
    <string name="wifi_repeater_info_button">Got it!</string>
    <string name="pick_and_play_info_title"><![CDATA[Share Free Internet via Pick & Play]]></string>
    <string name="pick_and_play_info_message">
        <![CDATA[If you mobile is [ROOTED], then you can share free internet to other devices. Pick & Play will scan other devices within the same wifi network. Then you can pick any device from the discovered devices list which will instantly be able to access free internet.]]></string>
    <string name="pick_and_play_info_button">Got it!</string>
    <string name="status_exiting">Exiting</string>
    <string name="upgrade_via_browser_hint">Open browser and download the update manually</string>
    <string name="status_downloaded">Downloaded</string>
    <string name="status_downloading">Downloading</string>
    <string name="status_download_failed">failed to download</string>
    <string name="button_free_internet">Free Internet</string>
    <string name="button_pick_and_play"><![CDATA[Pick & Play]]></string>
    <string name="button_wifi_repeater">Wifi Repeater</string>
    <string name="help_pick_and_play">scan the currently connected wifi network to discover your other devices (iphone, windows pc, etc). pick any device from the list, then that device will route via fqrouter to access restricted website such as youtube or twitter.</string>
    <string name="wifi_repeater_ssid">SSID (Alphabetic or numeric character only)</string>
    <string name="wifi_repeater_password">Password (Must more than 8 characters)</string>
    <string name="pref_goagent_category">GoAgent</string>
    <string name="pref_goagent_public_servers">GoAgent Public Servers</string>
    <string name="pref_goagent_public_servers_summary">goagent appids shared by others, especially thanks the gfanqiang
        project
    </string>
    <string name="pref_goagent_private_servers">GoAgent Private Servers</string>
    <string name="pref_shadowsocks_category">Shadowsocks</string>
    <string name="pref_shadowsocks_public_servers">Shadowsocks Public Servers</string>
    <string name="pref_shadowsocks_public_servers_summary">shadowsocks servers shared by others</string>
    <string name="pref_shadowsocks_private_servers">Shadowsocks Private Servers</string>
    <string name="pref_http_proxy_category">HTTP Proxy</string>
    <string name="pref_http_proxy_public_servers">HTTP Proxy Public Servers</string>
    <string name="pref_http_proxy_public_servers_summary">http proxy servers shared by others</string>
    <string name="pref_http_proxy_private_servers">HTTP Proxy Private Servers</string>
    <string name="pref_ssh_category">SSH</string>
    <string name="pref_ssh_public_servers">SSH Private Servers</string>
    <string name="pref_bypass_category">Bypass GFW</string>
    <string name="pref_bypass_youtube_scrambler">Youtube Scrambler</string>
    <string name="pref_bypass_youtube_scrambler_summary">scramble youtube traffic, so that GFW can let us go, without using a proxy. disable this scrambler will make internet speed much slower!
    </string>
    <string name="pref_tcp_scrambler">TCP Scrambler</string>
    <string name="pref_tcp_scrambler_summary">scramble at TCP level, so that GFW can let us go, without using a proxy
        server. disable this scrambler will make internet speed much slower!
    </string>
    <string name="pref_shortcut_category">Shortcut</string>
    <string name="pref_shortcut_china_shortcut">China Shortcut</string>
    <string name="pref_shortcut_china_shortcut_summary">if server is china ip, access directly. disable this shortcut will make internet speed much slower!</string>
    <string name="pref_shortcut_direct_access">Direct Access If Possible</string>
    <string name="pref_shortcut_direct_access_summary">try access directly first, use proxy only if tried and failed. disable this shortcut will make internet speed much slower!</string>
    <string name="pref_general_category">General</string>
    <string name="pref_general_auto_update">Auto Update</string>
    <string name="pref_general_auto_update_summary">check update automatically</string>
    <string name="pref_goagent_appid">AppId</string>
    <string name="pref_goagent_appid_summary">appid deployed to google application engine</string>
    <string name="pref_goagent_path">Path</string>
    <string name="pref_goagent_path_summary">do not need to change</string>
    <string name="pref_goagent_password">Password</string>
    <string name="pref_goagent_password_summary">do not need to change</string>
    <string name="pref_delete"><![CDATA[>> Delete]]></string>
    <string name="pref_http_proxy_host">Host</string>
    <string name="pref_http_proxy_host_summary">ip or domain name</string>
    <string name="pref_http_proxy_port">Port</string>
    <string name="pref_http_proxy_username">Username</string>
    <string name="pref_http_proxy_password">Password</string>
    <string name="pref_http_proxy_traffic_type">Traffic Type</string>
    <string name="pref_http_proxy_traffic_type_summary">use the proxy for http or https or both</string>
    <string name="pref_http_proxy_transport_type">Transport Type</string>
    <string name="pref_http_proxy_transport_type_summary">the connection to proxy server is secured or not</string>
    <string name="pref_http_proxy_spdy_version">SPDY Version</string>
    <string name="pref_http_proxy_spdy_version_summary">you can ignore this if transport type is not spdy</string>
    <string name="pref_http_proxy_spdy_connections_count">SPDY Connections Count</string>
    <string name="pref_http_proxy_spdy_connections_count_summary">you can ignore this if transport type is not spdy
    </string>
    <string name="pref_shadowsocks_host">Host</string>
    <string name="pref_shadowsocks_host_summary">ip or domain name</string>
    <string name="pref_shadowsocks_port">Port</string>
    <string name="pref_shadowsocks_password">Password</string>
    <string name="pref_shadowsocks_encryption_method">Encryption Method</string>
    <string name="pref_ssh_host">Host</string>
    <string name="pref_ssh_host_summary">ip or domain name</string>
    <string name="pref_ssh_port">Port</string>
    <string name="pref_ssh_username">Username</string>
    <string name="pref_ssh_password">Password</string>
    <string name="pref_ssh_connections_count">SSH Connections Count</string>
    <string name="pref_add"><![CDATA[>> Add]]></string>
    <string name="pref_host_not_set">Incomplete Private Server Settings</string>
    <string name="pref_restart_wifi_repeater">You need to restart wifi hotspot to apply the changes</string>
    <string name="pref_restart_app">You need to restart fqrouter to apply the changes</string>
    <string name="pref_batch_add"><![CDATA[>> Batch Add]]></string>
    <string name="pref_goagent_batch_add_input_title">Add one a time</string>
    <string name="pref_goagent_batch_add_input_message">AppId</string>
    <string name="pref_goagent_batch_add_input_add_more">Add more</string>
    <string name="pref_goagent_batch_add_input_done">Done</string>
    <string name="pref_wifi_hotspot_password_constraint">Password must be 8 characters or longer</string>
    <string name="pref_ssh_private_key_hint">leave password empty if you are using private key authentication. put
        private key at
    </string>
    <string name="status_scanning">scanning...</string>
    <string name="menu_rescan">Rescan</string>
    <string name="pick_and_play_picked_hint">picked %s, free internet is accessible from that device now</string>
    <string name="status_scan_completed">scan completed</string>
    <string name="pref_general_auto_access_check">Automatically check effectiveness</string>
    <string name="pref_general_auto_access_check_summary">Check if youtube/twitter is accessible after start</string>
    <string name="pref_general_notification_enabled">Notification Bar Icon</string>
    <string name="report_error_alert_title">Help me, help yourself</string>
    <string name="pick_and_play_unpicked_hint">unpicked %s, network went back to normal</string>
    <string name="report_error_alert_message">Please describe the problem in details (which website you can not access). Otherwise you are wasting my time
        which could be spent on making fqrouter better. Thanks for your understanding!
    </string>
    <string name="report_error_alert_ok">I will!</string>
    <string name="report_error_alert_no">Maybe next time</string>
    <string name="dns_polluted_alert_title">DNS Polluted</string>
    <string name="pref_save"><![CDATA[>> Save]]></string>
    <string name="wifi_repeater_hint">Start a wifi hotspot to share free internet. Different from Android built-in 3G
        hotspot, this wifi hotspot shares wifi instead of 3G
    </string>
</resources>