<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="HttpProxyHost"
            android:title="@string/pref_http_proxy_host"
            android:summary="@string/pref_http_proxy_host_summary"/>
    <EditTextPreference
            android:key="HttpProxyPort"
            android:title="@string/pref_http_proxy_port"
            android:inputType="number"/>
    <EditTextPreference
            android:key="HttpProxyUsername"
            android:title="@string/pref_http_proxy_username"/>
    <EditTextPreference
            android:key="HttpProxyPassword"
            android:title="@string/pref_http_proxy_password"/>
    <ListPreference
            android:key="HttpProxyTrafficType"
            android:title="@string/pref_http_proxy_traffic_type"
            android:summary="@string/pref_http_proxy_traffic_type_summary"/>
    <ListPreference
            android:key="HttpProxyTransportType"
            android:title="@string/pref_http_proxy_transport_type"
            android:summary="@string/pref_http_proxy_transport_type_summary"/>
    <ListPreference
            android:key="HttpProxySpdyVersion"
            android:title="@string/pref_http_proxy_spdy_version"
            android:summary="@string/pref_http_proxy_spdy_version_summary"/>
    <EditTextPreference
            android:key="HttpProxySpdyConnectionsCount"
            android:title="@string/pref_http_proxy_spdy_connections_count"
            android:inputType="number"
            android:summary="@string/pref_http_proxy_spdy_connections_count_summary"/>
    <Preference
            android:key="HttpProxySave"
            android:title="@string/pref_save"
            android:defaultValue=""/>
    <Preference
            android:key="HttpProxyDelete"
            android:title="@string/pref_delete"
            android:defaultValue=""/>
</PreferenceScreen>