<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_bypass_category" android:key="Bypass">
        <CheckBoxPreference
                android:key="YoutubeScramblerEnabled"
                android:title="@string/pref_bypass_youtube_scrambler"
                android:summary="@string/pref_bypass_youtube_scrambler_summary"
                android:defaultValue="true"/>
        <CheckBoxPreference
                android:key="TcpScramblerEnabled"
                android:title="@string/pref_tcp_scrambler"
                android:summary="@string/pref_tcp_scrambler_summary"
                android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_shortcut_category">
        <CheckBoxPreference
                android:key="ChinaShortcutEnabled"
                android:title="@string/pref_shortcut_china_shortcut"
                android:summary="@string/pref_shortcut_china_shortcut_summary"
                android:defaultValue="true"/>
        <CheckBoxPreference
                android:key="DirectAccessEnabled"
                android:title="@string/pref_shortcut_direct_access"
                android:summary="@string/pref_shortcut_direct_access_summary"
                android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>