<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="GoAgentAppId"
            android:title="@string/pref_goagent_appid"
            android:summary="@string/pref_goagent_appid_summary"
            android:defaultValue=""/>
    <EditTextPreference
            android:key="GoAgentPath"
            android:title="@string/pref_goagent_path"
            android:summary="@string/pref_goagent_path_summary"
            android:defaultValue="/2"/>
    <EditTextPreference
            android:key="GoAgentPassword"
            android:title="@string/pref_goagent_password"
            android:summary="@string/pref_goagent_password_summary"
            android:defaultValue=""/>
    <Preference
            android:key="GoAgentSave"
            android:title="@string/pref_save"
            android:defaultValue=""/>
    <Preference
            android:key="GoAgentDelete"
            android:title="@string/pref_delete"
            android:defaultValue=""/>
</PreferenceScreen>