<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="ShadowsocksHost"
            android:title="@string/pref_shadowsocks_host"
            android:summary="@string/pref_shadowsocks_host_summary"/>
    <EditTextPreference
            android:key="ShadowsocksPort"
            android:title="@string/pref_shadowsocks_port"
            android:inputType="number"/>
    <EditTextPreference
            android:key="ShadowsocksPassword"
            android:title="@string/pref_shadowsocks_password"/>
    <ListPreference
            android:key="ShadowsocksEncryptionMethod"
            android:title="@string/pref_shadowsocks_encryption_method"/>
    <Preference
            android:key="ShadowsocksSave"
            android:title="@string/pref_save"
            android:defaultValue=""/>
    <Preference
            android:key="ShadowsocksDelete"
            android:title="@string/pref_delete"
            android:defaultValue=""/>
</PreferenceScreen>